# hsnewbot

./: README.md  app.py  hs.sh  main.py  pyproject.toml
